--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.18.0",
     "expo": "^32.0.0",
     "firebase": "^5.8.6",
+    "firebase-admin": "^7.0.0",
+    "firebase-functions": "^2.2.0",
     "lodash": "^4.17.11",
     "qs": "^6.6.0",
     "react": "16.5.0",
